.jest-full.log
(node:80919) ExperimentalWarning: VM Modules is an experimental feature and might change at any time
(Use `node --trace-warnings ...` to show where the warning was created)
PASS __tests__/rpcReadRacing.test.js
  race read helpers
    ✓ getLatestBlockhashRaced returns first successful result and times out losers (1275 ms)
    ✓ simulateTransactionRaced fails over when first wave errors (1352 ms)
    ✓ raced helpers throw when all endpoints fail (1346 ms)

PASS __tests__/tokenAccountsRaced.test.js
  getParsedTokenAccountsByOwnerRaced
    ✓ returns from the fastest endpoint (1268 ms)
    ✓ fails over when the fastest rejects (1242 ms)
    ✓ throws when all endpoints fail (1320 ms)

PASS __tests__/rpcHealth.test.js
  RPC health loop
    ✓ rotates to the fastest endpoint based on measured latency (154 ms)
    ✓ handles errors in measure function gracefully (352 ms)

PASS __tests__/rpcSendRacing.test.js
  sendTransactionRaced
    ✓ returns first successful signature after initial timeout and records race meta (111 ms)
    ✓ fails over across waves when first endpoint errors and records attempts (55 ms)
    ✓ respects backoff by skipping recently failed endpoint on subsequent call (68 ms)

PASS __tests__/rpcStatusSummary.test.js
  /rpc/status summary
    ✓ should include summary with active and fastest keys (12 ms)

PASS __tests__/copyTradeUserState.test.js
  copyTrade userState defaults
    ✓ getUserState initializes copyTrade defaults
    ✓ addCopyTradeWallet normalizes fields with sensible defaults

  console.warn
    Private relay responded without success: {"success":false,"error":"relay_down"}

      216 |       }
      217 |       // If relay returns non-success, fall through to RPC with context
    > 218 |       console.warn(
          |               ^
      219 |         `Private relay responded without success: ${JSON.stringify(
      220 |           result
      221 |         ).slice(0, 300)}`

      at Module.warn (src/services/rpc.js:218:15)
      at __tests__/rpcRelayFallback.test.js:120:21
      at Object.<anonymous> (__tests__/rpcRelayFallback.test.js:100:5)

  console.warn
    Private relay responded without success: {"ok":false}

      216 |       }
      217 |       // If relay returns non-success, fall through to RPC with context
    > 218 |       console.warn(
          |               ^
      219 |         `Private relay responded without success: ${JSON.stringify(
      220 |           result
      221 |         ).slice(0, 300)}`

      at Module.warn (src/services/rpc.js:218:15)
      at __tests__/rpcRelayFallback.test.js:148:21
      at Object.<anonymous> (__tests__/rpcRelayFallback.test.js:130:5)

  console.warn
    Private relay responded without success: {"success":false,"error":"flashbots_down"}

      216 |       }
      217 |       // If relay returns non-success, fall through to RPC with context
    > 218 |       console.warn(
          |               ^
      219 |         `Private relay responded without success: ${JSON.stringify(
      220 |           result
      221 |         ).slice(0, 300)}`

      at Module.warn (src/services/rpc.js:218:15)
      at __tests__/rpcRelayFallback.test.js:234:21
      at Object.<anonymous> (__tests__/rpcRelayFallback.test.js:211:5)

PASS __tests__/rpcRelayFallback.test.js
  sendTransactionRaced with private relay
    ✓ succeeds via private relay when relay returns success+signature (1 ms)
    ✓ falls back to RPC when relay throws error (39 ms)
    ✓ falls back to RPC when relay returns non-success (27 ms)
  sendTransactionRaced with Flashbots private relay
    ✓ uses Flashbots vendor path and succeeds without RPC (1 ms)
    ✓ falls back to RPC when Flashbots relay errors (20 ms)

PASS src/services/__tests__/fees.cap.test.js
  computePriorityFeeCap
    ✓ returns MID cap when latency is invalid or negative (1 ms)
    ✓ low latency under T1 uses LOW cap (>= min floor)
    ✓ medium latency under T2 uses MID cap
    ✓ high latency under T3 uses HIGH cap
    ✓ very high latency uses MAX cap

PASS __tests__/mapStrategyToMicroBatch.test.js
  mapStrategyToMicroBatch
    ✓ defaults to 2 for unknown or missing strategy (1 ms)
    ✓ returns 1 for conservative
    ✓ returns 2 for balanced
    ✓ returns 3 for aggressive (3 ms)

PASS __tests__/tradeStore.test.js
  tradeStore
    ✓ should append and read trades (1 ms)

PASS __tests__/riskLockDecision.test.js
  riskCheckToken LP lock decisions
    ✓ blocks when requireLpLock=true and a provider reports unlocked (1 ms)
    ✓ blocks when requireLpLock=true and no provider verifies a lock
    ✓ passes when requireLpLock=false even if providers are inconclusive (1 ms)

FAIL __tests__/copyTradeDecision.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    SyntaxError: /Users/alihassan/Desktop/TurboSol/src/services/watchers/copyTradeMonitor.js: Unexpected token (277:0)

      275 |   }
      276 | }
    > 277 | }
          | ^
      278 |
      279 | export function startCopyTradeMonitor(
      280 |   chatId,

      at constructor (node_modules/@babel/parser/src/parse-error.ts:95:45)
      at Parser.toParseError [as raise] (node_modules/@babel/parser/src/tokenizer/index.ts:1503:19)
      at Parser.raise [as unexpected] (node_modules/@babel/parser/src/tokenizer/index.ts:1543:16)
      at Parser.unexpected [as parseExprAtom] (node_modules/@babel/parser/src/parser/expression.ts:1350:16)
      at Parser.parseExprAtom [as parseExprSubscripts] (node_modules/@babel/parser/src/parser/expression.ts:734:23)
      at Parser.parseExprSubscripts [as parseUpdate] (node_modules/@babel/parser/src/parser/expression.ts:713:21)
      at Parser.parseUpdate [as parseMaybeUnary] (node_modules/@babel/parser/src/parser/expression.ts:675:23)
      at Parser.parseMaybeUnary [as parseMaybeUnaryOrPrivate] (node_modules/@babel/parser/src/parser/expression.ts:409:14)
      at Parser.parseMaybeUnaryOrPrivate [as parseExprOps] (node_modules/@babel/parser/src/parser/expression.ts:421:23)
      at Parser.parseExprOps [as parseMaybeConditional] (node_modules/@babel/parser/src/parser/expression.ts:376:23)
      at Parser.parseMaybeConditional [as parseMaybeAssign] (node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at Parser.parseMaybeAssign [as parseExpressionBase] (node_modules/@babel/parser/src/parser/expression.ts:226:23)
      at parseExpressionBase (node_modules/@babel/parser/src/parser/expression.ts:217:39)
      at Parser.callback [as allowInAnd] (node_modules/@babel/parser/src/parser/expression.ts:3187:16)
      at Parser.allowInAnd [as parseExpression] (node_modules/@babel/parser/src/parser/expression.ts:217:17)
      at Parser.parseExpression [as parseStatementContent] (node_modules/@babel/parser/src/parser/statement.ts:683:23)
      at Parser.parseStatementContent [as parseStatementLike] (node_modules/@babel/parser/src/parser/statement.ts:477:17)
      at Parser.parseStatementLike [as parseModuleItem] (node_modules/@babel/parser/src/parser/statement.ts:414:17)
      at Parser.parseModuleItem [as parseBlockOrModuleBlockBody] (node_modules/@babel/parser/src/parser/statement.ts:1438:16)
      at Parser.parseBlockOrModuleBlockBody [as parseBlockBody] (node_modules/@babel/parser/src/parser/statement.ts:1412:10)
      at Parser.parseBlockBody [as parseProgram] (node_modules/@babel/parser/src/parser/statement.ts:229:10)
      at Parser.parseProgram [as parseTopLevel] (node_modules/@babel/parser/src/parser/statement.ts:203:25)
      at Parser.parseTopLevel [as parse] (node_modules/@babel/parser/src/parser/index.ts:93:10)
      at parse (node_modules/@babel/parser/src/index.ts:92:38)
      at parser (node_modules/@babel/core/src/parser/index.ts:28:19)
          at parser.next (<anonymous>)
      at normalizeFile (node_modules/@babel/core/src/transformation/normalize-file.ts:49:24)
          at normalizeFile.next (<anonymous>)
      at run (node_modules/@babel/core/src/transformation/index.ts:40:36)
          at run.next (<anonymous>)
      at transform (node_modules/@babel/core/src/transform.ts:29:20)
          at transform.next (<anonymous>)
      at step (node_modules/gensync/index.js:261:32)
      at node_modules/gensync/index.js:273:13
      at async.call.result.err.err (node_modules/gensync/index.js:223:11)
      at node_modules/gensync/index.js:189:28
      at cb (node_modules/@babel/core/src/gensync-utils/async.ts:90:7)
      at node_modules/gensync/index.js:113:33
      at step (node_modules/gensync/index.js:287:14)
      at node_modules/gensync/index.js:273:13
      at async.call.result.err.err (node_modules/gensync/index.js:223:11)

Test Suites: 1 failed, 11 passed, 12 total
Tests:       32 passed, 32 total
Snapshots:   0 total
Time:        10.041 s
Ran all test suites.
